--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ axum = "0.8.4"
 tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
 html-escape = "0.2"
 rand = "0.9.2"
+regex = "1"
+once_cell = "1"
